--- a/trunk/doc/verslag/verslag-hovercraftuniverse.tex
+++ b/trunk/doc/verslag/verslag-hovercraftuniverse.tex
@@ -268,6 +268,9 @@ keyname=value
 keyname = value, value , value #comment
 \end{lstlisting}
 
+\newpage
+
+
 \section{Rolverdeling en verantwoordelijkheden}
 \begin{description}
 	\item[Kristof Overdulve] Algemene client rendering architectuur, Ogre visualisatie en animatie, 2D artist, 3D modellering
